# Final_Year_Project

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/imageprocessor/: DatabaseTest.java  ExampleInstrumentedTest.java  HomeFragmentTest.java  MainActivityTest.java  ParcelableTest.java  RoomDBTest.java  SettingsTest.java  SharedPrefTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/imageprocessor/: MainActivity.java
app/src/main/java/com/example/imageprocessor/activity/: MainActivity.java  RealTimeActivity.java  SettingsActivity.java  SplashActivity.java  StartActivity.java
app/src/main/java/com/example/imageprocessor/adapter/: StartPagerAdapter.java
app/src/main/java/com/example/imageprocessor/detector/: DefaultDetector.java  RectangleDetector.java  ShapeDetector.java
app/src/main/java/com/example/imageprocessor/misc/: Constants.java  CurrentMode.java  DarkModeSharedPref.java  Flash.java  (+8 more)
app/src/main/jni/: Android.mk  com_example_imageprocessor_misc_NativePanorama.cpp  com_example_imageprocessor_misc_NativePanorama.h
app/src/main/res/anim/: splash_enlarge.xml
app/src/main/res/drawable/: about_gradient_color.xml  button_background.xml  button_gradient.xml  circle_background_purple.xml  dot_focused.xml  dot_normal.xml  dot_select.xml  home_gallery.xml  home_stitcher.xml  ic_custom_camera.xml  ic_file_download_gray_30dp.xml  ic_system_camera.xml  ic_system_gallery.xml  image_placeholder.xml  launch_screen.xml  save_to_phone_button.xml
app/src/main/res/layout/: activity_real_time.xml  activity_splash.xml  activity_start.xml  content_about.xml  detect_fragment.xml  fragment_about.xml  fragment_camera.xml  fragment_gallery.xml  fragment_history.xml  fragment_home.xml  fragment_start_one.xml  fragment_start_three.xml  fragment_start_two.xml  fragment_stitcher.xml  history_cell.xml  history_footer.xml  nav_header_main.xml  no_history.xml  photo_view.xml  photo_view_fragment.xml  preview_fragment.xml
app/src/main/res/menu/: activity_main_drawer.xml  main.xml  menu_history.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: arrays.xml  colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: provider_paths.xml  root_preferences.xml
app/src/test/java/com/example/imageprocessor/: AngleTest.java  DistanceTest.java  ExampleUnitTest.java  ImageTest.java  ParallelTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary348/src/main/: AndroidManifest.xml
(+44 files in other folders)
